@@ -1,6 +1,11 @@
 New in spot 2.6.2.dev (not yet released)
 
-  Nothing yet.
+  Bugs fixed:
+
+  - Running "ltl2tgba -B" on formulas of the type FG(safety) would
+    unexpectedly use a co-Büchi automaton as an intermediate step.
+    This in turn caused "ltl2tgba -U -B" to not produce unambiguous
+    automata.
 
 New in spot 2.6.2 (2018-09-28)
 
